# mwfractal

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  ChangeLog  Dockerfile  Makefile  Makefile.am  Makefile.in  NEWS  README.md  asciiart.sh  bootstrap  check-docker-build-context  clean  config.h  config.status  configure  configure.ac  demo.sh  dmwf  dmwf-ascii  mwfractal
.github/: dependabot.yml
.github/workflows/: build.yaml  cache-maintenance.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
cmake/: config.h.in
src/: ProgramOptions.cpp  ProgramOptions.hpp  main.cpp  utils.cpp  utils.hpp
src/.deps/: ProgramOptions.Po  main.Po  utils.Po
src/colourizers/: Colourizer.cpp  Colourizer.hpp  MW_Darts_Violet_to_Red.cpp  MW_Darts_Violet_to_Red.hpp  NEM_Violet_to_Red.cpp  NEM_Violet_to_Red.hpp  NEM_Violet_to_Red_Lightness.cpp  NEM_Violet_to_Red_Lightness.hpp  NEM_White_to_Black.cpp  NEM_White_to_Black.hpp
src/colourizers/.deps/: Colourizer.Po  MW_Darts_Violet_to_Red.Po  NEM_Violet_to_Red.Po  NEM_Violet_to_Red_Lightness.Po  NEM_White_to_Black.Po
src/generators/: Generator.cpp  Generator.hpp  Julia.cpp  Julia.hpp  Julia3.cpp  Julia3.hpp  JuliaPowExp.cpp  JuliaPowExp.hpp  Mandelbrot.cpp  Mandelbrot.hpp
src/generators/.deps/: Generator.Po  Julia.Po  Mandelbrot.Po
